@@ -1,5 +1,12 @@
 09/21/2003 Bob Rossi <bob@brasko.net>
 
+   * types.h: Command, rename type from 'Command' to 'tgdb_command'
+   * types.c: tgdb_print_item,tgdb_delete_command,tgdb_append_command, renamed
+   Command to tgdb_command.
+   * driver.c: gdb_input, ditto
+
+09/21/2003 Bob Rossi <bob@brasko.net>
+
    * a2-tgdb.h: a2_return_client_command, rename type tgdb_command to
    tgdb_command_type.
    * a2-tgdb.c: ditto
