@@ -1,3 +1,7 @@
+09/21/2003 Bob Rossi <bob@brasko.net>
+
+   * cgdb.c: process_commands, rename 'Command' to 'tgdb_command'
+
 09/15/2003 Bob Rossi <bob@brasko.net>
 
    * cgdb.c: process_commands, removed TGDB_QUIT from switch and added
